Delete slider width

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div id="container" style="width: 700px; height: 700px; display: flex; align-items: center;">
       <img style="max-width:50%; margin: auto;" src="https://instagram.fiev22-1.fna.fbcdn.net/v/t51.2885-15/e35/120897659_197127948463447_3750127333047493306_n.jpg?tp=1&_nc_ht=instagram.fiev22-1.fna.fbcdn.net&_nc_cat=107&_nc_ohc=0mCCWzMXrp4AX9Ew9OE&oh=9b704a9f041c03ca010d46c8a32e96bc&oe=607C7500" alt="">
    </div>
-    <div id="slider" style="height: 100px; width: 100px; background-color: green;">
+    <div id="slider" style="height: 100px; background-color: green;">
       <div id="thumb"></div>
     </div>  
   </div>
