--- a/index.html
+++ b/index.html
@@ -26,7 +26,30 @@
   =\_Y_/=
    {>o<}
   </pre>
+<style>
 
+#slider {
+  margin: 0 auto;
+  border-radius: 5px;
+  background: #E0E0E0;
+  background: -webkit-gradient(linear, left top, right bottom, from(#E0E0E0), to(#EEEEEE));
+  background: linear-gradient(left top, #E0E0E0, #EEEEEE);
+  width: 310px;
+  height: 15px;
+  margin: 5px;
+}
+
+#thumb {
+  width: 10px;
+  height: 25px;
+  border-radius: 3px;
+  position: relative;
+  left: 150px;
+  top: -5px;
+  background: blue;
+  cursor: pointer;
+}
+</style>
 
   <div style="display: flex; flex-direction: column; align-items: center;">
     <div id="container" style="width: 700px; height: 700px; display: flex; align-items: center;">
