--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mocha/3.2.0/mocha.css">
   <!-- добавим стили mocha для отображения результатов -->
-  <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="./css/main.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/mocha/3.2.0/mocha.js"></script>
   <!-- добавляем сам фреймворк mocha -->
   <script>mocha.setup('bdd');</script><!-- включаем режим тестирования в стиле BDD -->
@@ -26,30 +26,6 @@
   =\_Y_/=
    {>o<}
   </pre>
-<style>
-
-#slider {
-  margin: 0 auto;
-  border-radius: 5px;
-  background: #E0E0E0;
-  background: -webkit-gradient(linear, left top, right bottom, from(#E0E0E0), to(#EEEEEE));
-  background: linear-gradient(left top, #E0E0E0, #EEEEEE);
-  width: 310px;
-  height: 15px;
-  margin: 5px;
-}
-
-#thumb {
-  width: 10px;
-  height: 25px;
-  border-radius: 3px;
-  position: relative;
-  left: 150px;
-  top: -5px;
-  background: blue;
-  cursor: pointer;
-}
-</style>
 
   <div style="display: flex; flex-direction: column; align-items: center;">
     <div id="container" style="width: 700px; height: 700px; display: flex; align-items: center;">
